[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/levels/level.gd" type="Script" id=1]
[ext_resource path="res://src/game/spaceship/Spaceship.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/game/basic_planet/PlanetRed.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/game/asteroids/AsteroidsArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/game/basic_planet/Planet.gd" type="Script" id=5]
[ext_resource path="res://assets/graphisme/Planete rouge.png" type="Texture" id=6]
[ext_resource path="res://assets/graphisme/Drapeau.png" type="Texture" id=7]
[ext_resource path="res://assets/graphisme/Base drapeau.png" type="Texture" id=8]
[ext_resource path="res://src/game/Comete/Comete.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/graphisme/Planete jaune.png" type="Texture" id=10]
[ext_resource path="res://src/game/Enemy_spaceship/enemy_spaceship.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/game/Lunes/Lune.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Star.tscn" type="PackedScene" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2160.44, 173.724, 0, 0, 0, 0, -152.776, 176.244 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 263.173

[sub_resource type="CircleShape2D" id=3]
radius = 107.654

[sub_resource type="CircleShape2D" id=4]
radius = 217.648

[sub_resource type="CircleShape2D" id=5]
radius = 124.417

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 9, -11, -9, 11, 805.612, -190.31, -51, 35, 51, -35, 1380.93, -578.748, 61, -38, -61, 38, 1323.08, -657.863, 0, 0, 0, 0, 989.393, -441.883, 40.8756, -26.9858, -40.8756, 26.9858, 744.209, -271.735, -50.2016, 25.0016, 50.2016, -25.0016, 805.612, -190.31 )
}

[node name="Test_lvl_4" type="Node2D"]
script = ExtResource( 1 )
etoile = ExtResource( 13 )
nb_etoile = 40

[node name="spawn_position" type="Position2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[node name="Spaceship" parent="." instance=ExtResource( 2 )]
position = Vector2( 380.013, 1062.72 )

[node name="PlanetRedDepart" parent="." instance=ExtResource( 3 )]
position = Vector2( 385.536, 854.227 )

[node name="Asteroids Area" parent="." instance=ExtResource( 4 )]
position = Vector2( -5.03973, 131.032 )

[node name="Asteroids Area4" parent="Asteroids Area" instance=ExtResource( 4 )]
position = Vector2( 400.655, -194.028 )

[node name="Asteroids Area3" parent="Asteroids Area" instance=ExtResource( 4 )]
position = Vector2( 388.056, 37.7976 )

[node name="Asteroids Area2" parent="Asteroids Area" instance=ExtResource( 4 )]
position = Vector2( -2.51984, -221.746 )

[node name="Comet_path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Comet_path"]
position = Vector2( 2160.44, 173.724 )
rotation = 3.1405

[node name="Comete" parent="Comet_path/PathFollow2D" instance=ExtResource( 9 )]
speed = 200

[node name="PlanetYellow" type="Node2D" parent="."]
position = Vector2( 1365.76, -178.909 )
script = ExtResource( 5 )
speed = 1.0
lune_speed = 1.0

[node name="Sprite" type="Sprite" parent="PlanetYellow"]
texture = ExtResource( 10 )

[node name="SpriteDrapeau" type="Sprite" parent="PlanetYellow/Sprite"]
visible = false
position = Vector2( -2.6727, -116.708 )
texture = ExtResource( 7 )

[node name="SpriteBaseDrapeau" type="Sprite" parent="PlanetYellow/Sprite"]
visible = false
position = Vector2( -2.6727, -108.244 )
texture = ExtResource( 8 )

[node name="Gravity" type="Area2D" parent="PlanetYellow"]
collision_layer = 2

[node name="attraction" type="CollisionShape2D" parent="PlanetYellow/Gravity"]
shape = SubResource( 2 )

[node name="Body" type="Area2D" parent="PlanetYellow"]
collision_layer = 2

[node name="death" type="CollisionShape2D" parent="PlanetYellow/Body"]
shape = SubResource( 3 )

[node name="Pivot" type="Node2D" parent="PlanetYellow"]
rotation = 1.3631

[node name="OrbitPosition" type="Position2D" parent="PlanetYellow/Pivot"]
position = Vector2( -139.895, 109.774 )

[node name="PivotLune" type="Node2D" parent="PlanetYellow"]

[node name="PlanetRedCheckpoint" type="Node2D" parent="."]
position = Vector2( 391.325, -610.549 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
speed = 1.0
lune_speed = 0.8
is_checkpoint = true

[node name="Sprite" type="Sprite" parent="PlanetRedCheckpoint"]
texture = ExtResource( 6 )

[node name="SpriteDrapeau" type="Sprite" parent="PlanetRedCheckpoint/Sprite"]
visible = false
position = Vector2( -0.749161, -133.349 )
texture = ExtResource( 7 )

[node name="SpriteBaseDrapeau" type="Sprite" parent="PlanetRedCheckpoint/Sprite"]
visible = false
position = Vector2( -0.764341, -125.276 )
texture = ExtResource( 8 )

[node name="Gravity" type="Area2D" parent="PlanetRedCheckpoint"]
collision_layer = 2

[node name="attraction" type="CollisionShape2D" parent="PlanetRedCheckpoint/Gravity"]
shape = SubResource( 4 )

[node name="Body" type="Area2D" parent="PlanetRedCheckpoint"]
collision_layer = 2

[node name="death" type="CollisionShape2D" parent="PlanetRedCheckpoint/Body"]
shape = SubResource( 5 )

[node name="Pivot" type="Node2D" parent="PlanetRedCheckpoint"]
rotation = 1.3631

[node name="OrbitPosition" type="Position2D" parent="PlanetRedCheckpoint/Pivot"]
position = Vector2( -161.837, 141.963 )

[node name="PivotLune" type="Node2D" parent="PlanetRedCheckpoint"]

[node name="Lune" parent="PlanetRedCheckpoint/PivotLune" instance=ExtResource( 12 )]
position = Vector2( 370.997, 216.844 )

[node name="vaisseau_ennemy" type="Path2D" parent="."]
position = Vector2( -141.027, 33.27 )
curve = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="PathFollow2D" type="PathFollow2D" parent="vaisseau_ennemy"]
position = Vector2( 805.612, -190.31 )
rotation = -0.449405

[node name="Enemy_vaisseau" parent="vaisseau_ennemy/PathFollow2D" instance=ExtResource( 11 )]
position = Vector2( -0.123535, -0.34061 )
speed = 150
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlanetYellow/Gravity" to="PlanetYellow" method="_on_Gravity_body_entered"]
[connection signal="body_entered" from="PlanetRedCheckpoint/Gravity" to="PlanetRedCheckpoint" method="_on_Gravity_body_entered"]
